# ftt

./: .cookiecutter.json  .env.dev  .env.local  .env.production  .env.test  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROBLEM_STATEMENT.md  README.md  README.rst  __init__.py  app.py  conda-lock.yml  docker-compose.yml  environment.yml  index.html  mkdocs.yml  mypy.ini  noxfile.py  pyoxidizer.bzl  pyproject.toml  pyvenv.cfg  requirements.txt
.github/ISSUE_TEMPLATE/: custom.md
.github/PULL_REQUEST_TEMPLATE/: custom.md
.github/workflows/: ci.yml  linting.yml  testing.yml
application/: index.html
config/: example_portfolio.yml  symbols.yml
data/: NCM.txt  NYSE._txt  NYSE.txt  TOR.txt  TSX.txt  tbill_all.csv
db/: configuration.py  models.py  setup.py
docs/: application.md  conf.py  create_buy_order.puml  index.md  index.rst  installation.rst  relations.txt  web.md
ftt/: __init__.py  __main__.py  application.py  logger.py
ftt/brokers/: base_brokerage_factory.py  broker_order.py  brokerage_factory_registry.py  brokerage_service.py  contract.py  order.py  position.py  utils.py
ftt/cli/: application.py  context.py  plugin.py  shell.py  status_bar.py  token.py
ftt/handlers/: backtrade_handler.py  order_update_handler.py  portfolio_associate_securities_hanlder.py  portfolio_config_handler.py  portfolio_creation_handler.py  portfolio_deletion_handler.py  portfolio_handlers.py  portfolio_load_handler.py  portfolio_optimization_handler.py  portfolio_stats_handler.py  portfolio_update_handler.py  portfolio_version_activation_handler.py  portfolio_version_associate_securities_hanlder.py  portfolio_version_creation_handler.py  portfolio_version_deactivation_handler.py  portfolio_version_deletion_handler.py  portfolio_version_handlers.py  portfolio_version_load_active_handler.py  portfolio_version_load_handler.py  portfolio_version_loading_handler.py  portfolio_version_securities_adding_handler.py  portfolio_version_securities_disassociate_handler.py  portfolio_version_update_handler.py  portfolio_version_updation_handler.py  portfolio_versions_list_handler.py  portfolio_with_version_creation_handler.py  portfolios_list_handler.py  positions_compare_planned_actual_positions_handler.py  positions_synchronization_handler.py  securities_external_information_loading_handler.py  securities_external_information_upsert_handler.py  securities_handler.py  securities_information_loading_handler.py  securities_information_prices_loading_handler.py  securities_load_handler.py  securities_loading_handler.py  weights_calculation_handler.py  weights_list_handler.py  weights_list_load_handler.py
ftt/piloting/: history_loader.py  pandas_data.py
ftt/portfolio_management/: __init__.py  allocation_strategies.py  dtos.py  optimization_strategies.py
ftt/storage/: errors.py  schemas.py  storage.py  storage_manager.py  value_objects.py
ftt/ui/: __main__.py  application.py  controller.py  events.py  model.py  observer_registry.py  shared_elements.py  signals.py  state.py  validators.py  view.py  worker_signals.py  workers.py
jupiter_notebooks/: deviations-from-normality.ipynb  edhec_risk_kit.py  edhec_risk_kit_129.py  etf-portfolio.ipynb  max-drawdown-module.ipynb  module1.ipynb  playground.ipynb  section1.ipynb  var-cvar.ipynb  weights_calculation.ipynb
jupiter_notebooks/course_1/: etf-portfolio.ipynb  playground.ipynb  weights_calculation.ipynb
jupiter_notebooks/week1/: risk-adjusted-returns.ipynb
jupiter_notebooks/week2/: Module2.ipynb  efficient-frontier-1.ipynb  efficient-frontier-2.ipynb  ew-gmv-on-efficient-frontier.ipynb  max-sharpe-ratio-portfolio.ipynb  n-asset-frontier.ipynb
jupiter_notebooks/week3/: 2_cppi-drawdown-contraints.ipynb  4_ipywidgets-try.ipynb  6_interactive-monte-carlo-ccpi.ipynb  cppi-drawdown-contraints.ipynb  monte-carlo.ipynb
jupiter_notebooks/week4/: 2_cir-model.ipynb  3_liability_driven_investment.ipynb  module4.ipynb
market/: market.py  qoute.py
market/adapters/: alpha_vantage.py  yfinance.py
run/: account.py  analyze.py  canada_tbills.py  historic.py  history.py  strategy_tester.py  tickers.py  trading.py  tutorial.py  weights.py
scraper/: history_scraper.py  tickers_scraper.py
search/: search_index.json
spectator/: strategy.py
src/ftt/: __init__.py  __main__.py  main_window.py  models.py  ticker_table.py  workers.py
test/: googl-ma.json  test_helper.py  test_trade.py
test/db/: ticker_return_test.py
test/models/: order_test.py  portfolio_test.py  portfolio_version_test.py  ticker_return_test.py  ticker_test.py  weight_test.py
test/repositories/: portfolio_versions_repository_test.py  portfolios_repository_test.py  tickers_repository_test.py  weights_repository_test.py
test/services/: exchange_name_normalizer_test.py  ticker_loader_test.py
test/sizers/: weighted_portfolio_sizer_test.py
test/strategies/: weights_strategy_test.py
tests/: __init__.py  conftest.py  googl-intraday.json  googl-quote.json  helper.py  test_main.py  testcommon.py
tests/cli/: conftest.py  (+2 more)
trade/: __init__.py  __main__.py  base_command.py  configuration.py  history_loader.py  logger.py  pandas_data.py
(+540 files in other folders)
