[tool.poetry]
name = "ftt"
version = "0.1.0"
description = ""
authors = ["Artem Melnykov <melnykov.artem.v@gmail.com>"]

packages = [
    { include = "ftt" },
]

[tool.poetry.dependencies]
python = "^3.9"
yfinance = "^0.1.54"
pandas = "^1.4.0"
pyyaml = "^6.0"
pandas_datareader = "^0.9"
Yahoo-ticker-downloader = "^3.0.1"
peewee = "^3.14.0"
rich = "^11.1"
chime = "^0.6.0"
backtrader = "^1.9.76"
pyfolio = {git = "https://github.com/stzp777/pyfolio"}
pendulum = "^2.1.2"
cvxopt = "1.2.7"
pyportfolioopt = "^1.2.7"
ibpythonic = "^0.1.6"
IbPy2 = "^0.8.0"
python-nubia = "^0.2b5"
result = "^0.7.0"
Riskfolio-Lib = "^2.0.0"
ibapi = "9.81.1.post1"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
isort = "^5.9.1"
pytest-mock = "^3.5.1"
pytest = "^6.2.3"
flake8 = "^4.0.0"
black = "^22.1.0"
pylint = "^2.6.0"
pytest-cov = "^3.0.0"
mypy = "^0.931"

[tool.poetry.scripts]
ftt = "ftt:__main__"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
addopts="""
--cov-report term-missing \
--cov ftt \
--cov tests \
--ignore tests/testcommon.py \
--ignore tests/helper.py \
--no-cov-on-fail \
-ra \
-W ignore"""