[tool.poetry]
name = "ftt"
version = "0.0.1"
description = "Financial Trading Tool (FTT) – is an asset management application that helps to make the right decision on time."
authors = ["Artem Melnykov <melnykov.artem.v@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ftt-project/ftt"
repository = "https://github.com/ftt-project/ftt"
documentation = "https://fttproject.app/"
packages = [
    { include = "ftt", from = "src" },
]

include = [
    "LICENSE.md",
]

classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/fttproject/ftt/releases"
"Bug Tracker" = "https://github.com/ftt-project/ftt/issues"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
PySide6 = "^6.4.2"
yfinance = "^0.2.11"
financedatabase = "^1.0.2"


[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=23.0"
coverage = {extras = ["toml"], version = ">=7.1.0"}
flake8 = ">=6.0.0"
flake8-bandit = ">=4.1.1"
flake8-bugbear = ">=23.1.2"
flake8-docstrings = ">=1.7.0"
flake8-rst-docstrings = ">=0.3.0"
isort = ">=5.12.0"
mypy = ">=1.0.0"
pep8-naming = ">=0.13.3"
pre-commit = ">=3.0.4"
pre-commit-hooks = ">=4.4.0"
pytest = ">=7.2.1"
pyupgrade = ">=3.3.1"
typeguard = ">=2.13.3"

[tool.poetry.scripts]
ftt = "ftt.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["ftt", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
